--- a/.gitignore
+++ b/.gitignore
@@ -168,10 +168,14 @@ chroma/**
 !chroma/.gitkeep
 data
 !data/.gitkeep
+ericsson/chroma/**
+!ericsson/chroma/.gitkeep
+ericsson/data
+!ericsson/data/.gitkeep
 mercedes/chroma/**
 !mercedes/chroma/.gitkeep
-mercedes/chroma.mb/**
-!mercedes/chroma.mb/.gitkeep
 mercedes/data
 !mercedes/data/.gitkeep
+mercedes/chroma.mb/**
+!mercedes/chroma.mb/.gitkeep
 pyproject.toml
