--- a/.gitignore
+++ b/.gitignore
@@ -167,28 +167,8 @@ cython_debug/
 
 chroma/**
 !chroma/.gitkeep
-data
+data/
 !data/.gitkeep
-ericsson/chroma/**
-!ericsson/chroma/.gitkeep
-ericsson/data
-!ericsson/data/.gitkeep
-mercedes/chroma/**
-!mercedes/chroma/.gitkeep
-mercedes/data
-!mercedes/data/.gitkeep
-nokia/chroma/**
-!nokia/chroma/.gitkeep
-nokia/data
-!nokia/data/.gitkeep
-magyartelekom/chroma/**
-!magyartelekom/chroma/.gitkeep
-magyartelekom/data
-!magyartelekom/data/.gitkeep
-*/*nohup.out
-*/chroma/**
-!*/chroma/.gitkeep
-*/data/
-!*/data/.gitkeep
-*/__pycache__/
-*/flagged_data_points/
+*nohup.out
+__pycache__/
+flagged_data_points/
