feat: untracked the chroma db instances

--- a/.gitignore
+++ b/.gitignore
@@ -165,8 +165,11 @@ cython_debug/
 
 */*nohup.out
 
-chroma/**
+**/chroma/**
 !chroma/.gitkeep
+.vscode/
+
 *nohup.out
 __pycache__/
 flagged_data_points/
+
