feat: refactored project structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
-python-dotenv
 chromadb
-langchain-community
-langchain-openai
-PyPDF2
-langchain
-langchainhub
-langfuse
-sentence-transformers
-numpy
-langchain-mistralai
 gradio
-replicate
+langchain
+langchain-community
+langchainhub
+langchain-mistralai
+langchain-openai
+langchain-core
+langchain-fireworks==0.1.3
+langchain-huggingface
+langchain-google-genai
+langchain-anthropic
+numpy
+PyPDF2
+python-dotenv
+sentence-transformers
